[tool.poetry]
name = "udc"
version = "0.1.0"
description = ""
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
trio = "^0.22.0"
asyncclick = "^8.1.3.4"
quilt3 = "^5.3.1"
urllib3 = "<2"
pytest-watcher = "^0.2.6"

[tool.poetry.group.dev.dependencies]
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
