[tool.poetry]
name = "udc"
version = "0.1.0"
description = ""
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
trio = "^0.22.0"
asyncclick = "^8.1.3.4"
quilt3 = "^5.3.1"
urllib3 = "<2"

[tool.poetry.group.dev.dependencies]
pytest-coverage = "^0.0"
pytest-watcher = "^0.2.6"
pytest-asyncio = "^0.21.0"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
