[tool.poetry]
name = "udc"
version = "0.3.2"
description = "The Universal Data Client command-line tool"
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.7.0"
trio = "^0.22.0"
asyncclick = "^8.1.3.4"
quilt3 = "^5.3.1"
urllib3 = "<2"
typing-extensions = "^4.5.0"
quiltplus = ">=0.9.2"
# quiltplus = {git = "https://github.com/quiltdata/quiltplus.git", rev = "55-diff"}
benchling-sdk = "^1.6.1"
un-yaml = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pytest-coverage = "^0.0"
pytest-watcher = "^0.2.6"
pytest-asyncio = "^0.21.0"
pytest-trio = "^0.8.0"
pytest-codeblocks = "^0.16.1"
ipykernel = "^6.23.1"
mypy = "^1.3.0"
types-tzlocal = "^5.0.1.0"

[tool.poetry.scripts]
udc = "udc.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
